feat(ui): setup with tests fixes
